--- a/library.properties
+++ b/library.properties
@@ -1,4 +1,4 @@
-name=TE Connectivity Sensor Solutions HUT21D
+name=TE HUT21D
 version=1.0.0
 author=TE Connectivity
 maintainer=TE Connectivity Sensor Solutions
